log
Fri Mar 11 22:38:47 HSP 2022: 
 tests:  0|7
total_score: 0/70
1b7e55e
Sat Mar 12 13:29:37 HSP 2022: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
81fdd28
Sat Mar 12 13:40:14 HSP 2022: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:43:22: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
    int* subArreglo = a[primerDato-1];
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
2aca5ef
Sat Mar 12 13:43:30 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:45:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    subArreglo=a[primerDato];
              ^
cc1.exe: all warnings being treated as errors
Compilation failed
b361ee9
Sat Mar 12 13:45:16 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
f86bf6c
Sat Mar 12 13:45:58 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5ae7051
Sat Mar 12 13:50:11 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e407a9a
Sat Mar 12 13:51:50 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
817bdfe
Sat Mar 12 14:14:05 HSP 2022: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'crearPersona':
exercises.c:67:11: error: 'usuario' is used uninitialized in this function [-Werror=uninitialized]
    strcpy(usuario->nombre, nombre);
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6cd0967
Sat Mar 12 14:16:30 HSP 2022: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:71:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &usuario;
           ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
feb113d
Sat Mar 12 14:17:25 HSP 2022: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
test.c: In function 'crearPersona':
exercises.c:67:11: error: 'usuario' is used uninitialized in this function [-Werror=uninitialized]
    strcpy(usuario->nombre, nombre);
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
422f561
Sat Mar 12 14:19:03 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
2e6471e
Sat Mar 12 14:23:08 HSP 2022: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'crearVector':
exercises.c:90:24: error: 'vectorCreado' is used uninitialized in this function [-Werror=uninitialized]
    vectorCreado->datos = (int*) calloc(n, sizeof(int));
    ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7060289
Sat Mar 12 14:24:21 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
b9f8a59
